manifests/overlays/prod/route-webterminal.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: service-catalog-webterminal
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: service-catalog.operate-first.cloud
  path: "/webterminal"
