manifests/overlays/prod/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: service-catalog
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: service-catalog.operate-first.cloud
